--- a/src/css/cartao.css
+++ b/src/css/cartao.css
@@ -31,6 +31,7 @@
 .cartao-pokemon .cartao-imagem {
     width: 350px;
     height: 350px;
+    justify-content: space-around;
 }
 
 .cartao-pokemon img {
